--- a/css/media.css
+++ b/css/media.css
@@ -1,3 +1,8 @@
+@media screen and (max-width: 1385px) {
+  .declaration_row .decl_img .flex_btn .blue_button45 {
+    padding: 14px 25px;
+  }
+}
 @media screen and (max-width: 1340px) {
   .meest_corp_wrap {
     width: 80%;
@@ -24,6 +29,10 @@
   }
 }
 @media screen and (max-width: 1248px) {
+  .declaration_row .decl_img .flex_btn .blue_button45 {
+    padding: 14px 20px;
+    font-size: 14px;
+  }
   .s_register_page .w40 {
     width: 50%;
   }
@@ -50,6 +59,9 @@
   }
   .declaration_form {
     width: 80%;
+  }
+  .form_parcel_details .form-flex.del-details .parcel-weight {
+    margin-right: 10px;
   }
 }
 @media screen and (max-width: 1150px) {
@@ -81,6 +93,11 @@
   .footer_top_inner .need_help_row {
     padding: 22px 42px;
   }
+  .declaration_row .decl_img .flex_btn .blue_button45 {
+    padding: 14px 18px;
+    font-size: 13px;
+    margin-right: 5px;
+  }
 }
 @media screen and (max-width: 1080px) {
   .declaration_form {
@@ -88,6 +105,12 @@
   }
 }
 @media screen and (max-width: 991px) {
+  .form_parcel_details .form-flex-wrap {
+    margin-bottom: 0;
+  }
+  .form_parcel_details .form-flex.del-details .parcel-weight {
+    margin-right: 0px;
+  }
   .s_register_page {
     display: block;
   }
@@ -757,6 +780,7 @@
     display: none;
   }
   .declaration_wrap.details_declaration .action_btn_mobile {
+    display: block;
     background: #2361A9;
     padding: 4px 15px;
     border-radius: 100px;
