--- a/css/style.css
+++ b/css/style.css
@@ -937,7 +937,12 @@ body .currency_td .select2-container--default .select2-selection--single .select
   font-size: 12px;
 }
 
+.form-flex-wrap.billing_address .left {
+  width: calc(55% - 30px);
+  margin-right: 30px;
+}
 .form-flex-wrap.billing_address .right {
+  width: 45%;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -3064,4 +3069,45 @@ body.magnificpopupnoscroll {
 .flex_options_cards.second #input_pickup_loc2-error {
   position: absolute;
   bottom: -15px;
+}
+
+.white_btn {
+  background-color: transparent;
+  border: 2px solid #FFFFFF;
+  border-radius: 100px;
+  height: 45px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  width: 120px;
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 109%;
+  letter-spacing: 0.02em;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+.white_btn:hover {
+  background-color: #fff;
+  color: #2361A9;
+}
+
+.prohibited_items_popup {
+  width: 75%;
+  margin: 0 auto;
+}
+.prohibited_items_popup .main_img {
+  width: 100%;
+  margin-bottom: 20px;
+}
+.prohibited_items_popup .main_img img {
+  width: 100%;
+}
+.prohibited_items_popup .flex_btn {
+  display: flex;
+  justify-content: flex-end;
+}
+.prohibited_items_popup .flex_btn .white_btn:first-of-type {
+  margin-right: 10px;
 }
