--- a/css/style.css
+++ b/css/style.css
@@ -3111,3 +3111,11 @@ body.magnificpopupnoscroll {
 .prohibited_items_popup .flex_btn .white_btn:first-of-type {
   margin-right: 10px;
 }
+
+.parcel_all_goods {
+  border-top: 1px solid #D8E0EB;
+}
+
+.add_new_item_tr {
+  background: #F5F6F7;
+}
