--- a/css/style.css
+++ b/css/style.css
@@ -397,7 +397,7 @@ body {
 }
 
 body .select2-container {
-  width: 100% !important;
+  width: -moz-available !important;
 }
 
 body .select2-container--default .select2-selection--single {
@@ -2588,7 +2588,7 @@ body .ui-datepicker select.ui-datepicker-month {
 
 .add-new-item.mobile {
   padding: 18px 15px 15px;
-  display: flex;
+  display: none;
   background: #2361A9;
   align-items: center;
   cursor: pointer;
@@ -3118,4 +3118,8 @@ body.magnificpopupnoscroll {
 
 .add_new_item_tr {
   background: #F5F6F7;
+}
+
+.value_input {
+  width: 60px;
 }
