--- a/css/media.css
+++ b/css/media.css
@@ -28,6 +28,35 @@
     width: 100%;
   }
 }
+@media screen and (max-width: 1261px) {
+  .dropoff_flex {
+    width: calc(100% + 15px);
+    margin-left: -15px;
+    margin-bottom: 30px;
+  }
+  .dropoff_flex .dropoff_row {
+    width: calc(33.3% - 15px);
+    margin-left: 15px;
+    padding: 20px 25px;
+  }
+  .dropoff_flex .dropoff_row .img {
+    width: 18px;
+    height: 32px;
+    margin-right: 10px;
+  }
+  .dropoff_flex .dropoff_row .img img {
+    width: 100%;
+  }
+  .dropoff_flex .dropoff_row .text_part {
+    width: calc(100% - 28px);
+  }
+  .dropoff_flex .dropoff_row .name {
+    font-size: 14px;
+  }
+  .dropoff_flex .dropoff_row a {
+    font-size: 11px;
+  }
+}
 @media screen and (max-width: 1248px) {
   .declaration_row .decl_img .flex_btn .blue_button45 {
     padding: 14px 20px;
@@ -62,6 +91,11 @@
   }
   .form_parcel_details .form-flex.del-details .parcel-weight {
     margin-right: 10px;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .dropoff_flex .dropoff_row {
+    padding: 20px 13px;
   }
 }
 @media screen and (max-width: 1150px) {
@@ -105,6 +139,23 @@
 @media screen and (max-width: 1080px) {
   .declaration_form {
     width: 90%;
+  }
+  .term_delivery .fedex {
+    width: 57px;
+    height: 22px;
+  }
+  .term_delivery .ups_logo {
+    width: 30px;
+    height: 35px;
+  }
+  .term_delivery .text_part {
+    margin-left: 15px;
+  }
+  .term_delivery .text_part .name {
+    font-size: 13px;
+  }
+  .term_delivery .text_part p {
+    font-size: 11px;
   }
 }
 @media screen and (max-width: 991px) {
@@ -824,6 +875,39 @@
   .save_close_row .bcg_svg svg path {
     fill: #2361A9;
   }
+  .dropoff_flex {
+    display: block;
+    width: 100%;
+    margin-left: 0;
+    margin-bottom: 20px;
+  }
+  .dropoff_flex .dropoff_row {
+    width: 100%;
+    margin-left: 0;
+    margin-bottom: 10px;
+    width: 100%;
+    padding: 20px;
+  }
+  .dropoff_flex .dropoff_row .img {
+    width: 22px;
+    height: 31px;
+    margin-right: 12px;
+  }
+  .dropoff_flex .dropoff_row .text_part .name {
+    font-size: 14px;
+  }
+  .dropoff_flex .dropoff_row .text_part a {
+    font-size: 12px;
+  }
+  .parcels_delivery_table {
+    display: none;
+  }
+  .wrap_dropoff {
+    display: block;
+  }
+  .name_delivery_mobile {
+    display: block;
+  }
 }
 @media screen and (max-width: 550px) {
   .l_col {
@@ -901,5 +985,15 @@
   }
   .reports_update_padding .blue_button45 {
     font-size: 10px;
+  }
+}
+@media screen and (max-width: 335px) {
+  .input_choose_mobile .text_part .days {
+    margin-right: 5px;
+    font-size: 11px;
+  }
+  .input_choose_mobile .text_part .type_del img {
+    width: 25px;
+    height: 25px;
   }
 }
