--- a/css/style.css
+++ b/css/style.css
@@ -3123,3 +3123,313 @@ body.magnificpopupnoscroll {
 .value_input {
   width: 60px;
 }
+
+.parcels_delivery_table {
+  border-radius: 8px;
+  border: 1px solid #D7D8D9;
+  margin-bottom: 20px;
+}
+.parcels_delivery_table .delivery_terms_col {
+  width: 40%;
+  border-right: 1px solid #D7D8D9;
+}
+.parcels_delivery_table .method_delivery {
+  width: 30%;
+}
+.parcels_delivery_table .avia_method {
+  border-right: 1px solid #D7D8D9;
+}
+
+.wrap_line {
+  border-bottom: 1px solid #D7D8D9;
+  display: flex;
+  width: 100%;
+}
+.wrap_line:last-of-type {
+  border-bottom: unset;
+}
+
+.heading_row {
+  padding: 20px 22px;
+}
+.heading_row .name {
+  color: #2361A9;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 109%;
+  letter-spacing: 0.32px;
+  text-transform: uppercase;
+  margin-bottom: 3px;
+}
+.heading_row .descr {
+  color: #5A6673;
+  font-size: 12px;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 0.24px;
+}
+.heading_row .img_wrap {
+  width: 38px;
+  height: 38px;
+}
+.heading_row .img_wrap img {
+  width: 100%;
+}
+
+.input_choose .radio_options {
+  display: unset;
+  align-items: unset;
+  justify-content: unset;
+  border-right: unset;
+  padding: unset;
+}
+.input_choose input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+.input_choose .radio_label {
+  position: relative;
+  width: 25px;
+  height: 25px;
+}
+.input_choose .radio_label .custom_radio {
+  border: 1px solid #D7D8D9;
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+  display: block;
+  cursor: pointer;
+}
+
+.input_choose {
+  display: flex;
+  align-items: center;
+  padding: 22px 20px 25px;
+}
+.input_choose .price {
+  margin-left: 15px;
+  color: #0056A4;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 0.28px;
+}
+
+.term_delivery {
+  display: flex;
+  align-items: center;
+  padding: 16px 22px 20px;
+}
+.term_delivery .meest_logo {
+  width: 63px;
+  height: 16px;
+}
+.term_delivery .ups_logo {
+  width: 35px;
+  height: 40px;
+}
+.term_delivery .fedex {
+  width: 63px;
+  height: 28px;
+}
+.term_delivery .text_part {
+  margin-left: 20px;
+}
+.term_delivery .text_part .name {
+  color: #0056A4;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 0.28px;
+}
+.term_delivery .text_part .name--red {
+  color: #E40137;
+}
+.term_delivery .text_part p {
+  color: #5A6673;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 0.24px;
+}
+
+.dropoff_flex {
+  display: flex;
+  width: calc(100% + 25px);
+  margin-left: -25px;
+  margin-bottom: 30px;
+}
+.dropoff_flex .dropoff_row {
+  width: calc(33.3% - 25px);
+  margin-left: 25px;
+  display: flex;
+  align-items: center;
+  border-radius: 8px;
+  background: #F8F9FA;
+  padding: 25px 30px;
+}
+.dropoff_flex .dropoff_row .img {
+  width: 25px;
+  height: 36px;
+  margin-right: 15px;
+}
+.dropoff_flex .dropoff_row .img img {
+  width: 100%;
+}
+.dropoff_flex .dropoff_row .name {
+  color: #0056A4;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 0.32px;
+}
+.dropoff_flex .dropoff_row a {
+  color: #5A6673;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 0.24px;
+  text-decoration: none;
+}
+
+.wrap_dropoff {
+  display: none;
+}
+
+.name_delivery_mobile {
+  display: none;
+}
+
+.name_delivery_mobile {
+  width: calc(100% + 30px);
+  margin-left: -15px;
+  padding: 0px 15px 20px;
+  border-bottom: 1px solid #D7D8D9;
+  margin-bottom: 32px;
+}
+.name_delivery_mobile .name {
+  color: #2361A9;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 109%;
+  letter-spacing: 0.28px;
+  text-transform: uppercase;
+  margin-bottom: 3px;
+}
+.name_delivery_mobile .descr {
+  color: #5A6673;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 0.24px;
+}
+
+.term_delivery_mobile {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+.term_delivery_mobile .text_part h3 {
+  color: #0056A4;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 0.28px;
+}
+.term_delivery_mobile .text_part h3.red {
+  color: #E40137;
+}
+.term_delivery_mobile .text_part p {
+  color: #5A6673;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 0.24px;
+}
+
+.input_choose_mobile {
+  display: flex;
+  align-items: center;
+  border-radius: 8px;
+  border: 1px solid #D7D8D9;
+  margin-bottom: 10px;
+}
+.input_choose_mobile:nth-child(odd) {
+  margin-bottom: 20px;
+}
+.input_choose_mobile .radio_options {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-right: 1px solid #D7D8D9;
+  padding: 13px 15px 12px 15px;
+}
+.input_choose_mobile .radio_options input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+.input_choose_mobile .radio_options .radio_label {
+  position: relative;
+  width: 25px;
+  height: 25px;
+}
+.input_choose_mobile .radio_options .radio_label .custom_radio {
+  border: 1px solid #D7D8D9;
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+  display: block;
+  cursor: pointer;
+}
+.input_choose_mobile .text_part {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: calc(100% - 55px);
+  padding: 10px 15px;
+}
+.input_choose_mobile .text_part .price {
+  color: #0056A4;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 0.28px;
+}
+.input_choose_mobile .text_part .type_del {
+  display: flex;
+  align-items: center;
+}
+.input_choose_mobile .text_part .type_del h2 {
+  color: #2361A9;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 109%;
+  letter-spacing: 0.28px;
+  text-transform: uppercase;
+  margin-right: 7px;
+}
+.input_choose_mobile .text_part .type_del img {
+  width: 30px;
+  height: 30px;
+}
+.input_choose_mobile .text_part .right_part {
+  display: flex;
+  align-items: center;
+}
+.input_choose_mobile .text_part .days {
+  color: #5A6673;
+  margin-right: 10px;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 0.24px;
+}
